# capubridge

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  add-ui.ps1  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.local.json
.github/workflows/: desktop-build.yml
apps/desktop/: .npmrc  DESIGN.md  components.json  index.html  package.json  tsconfig.json
apps/desktop/scripts/: sync-platform-tools.mjs
apps/desktop/src/: App.vue  main.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/resources/: README.md
apps/desktop/src-tauri/resources/adb/: README.md
apps/desktop/src-tauri/src/: adb_runtime.rs  lib.rs
apps/desktop/src-tauri/src/commands/: adb.rs  cdp_proxy.rs  chrome.rs  files.rs  mirror.rs  mock_server.rs  mod.rs  perf.rs  port_forward.rs  recording.rs  sqlite.rs
apps/desktop/src-tauri/src/session/: cache_store.rs  device_session.rs  device_tracker.rs  events.rs  guards.rs  job_queue.rs  live_features.rs  mod.rs  registry.rs  types.rs
apps/desktop/src/components/: AppSidebar.vue  CommandPalette.vue  ConsoleText.vue  DeviceManagerModal.vue  NavMain.vue  (+2 more)
apps/docs/: package.json
apps/website2/: index.html  jsrepo.config.ts  package.json  tsconfig.json  vite.config.ts
apps/website2/src/: App.vue  style.css
docs/: ARCHITECTURAL-CHANGES.md  PHASE-1-TASKS.md  QUICKREF.md  Releases.md  SPEC.md  UI-REDESIGN.md
docs/superpowers/plans/: 2026-04-25-session-recording-replay.md
docs/superpowers/specs/: 2026-04-12-capubridge-comprehensive-roadmap.md
(+193 files in other folders)
