[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
shellexpand = "3"
tokio = { version = "1", features = ["time", "sync", "macros", "rt", "net", "process"] }
sysinfo = "0.33"
which = "7"
reqwest = { version = "0.12", features = ["json"] }
adb_client = "3.2"
parking_lot = "0.12"
tokio-tungstenite = "0.26"
http = "1"
futures-util = "0.3"
base64 = "0.22"
prost = "0.13"
rusqlite = { version = "0.34", features = ["bundled"] }
tempfile = "3"
axum = { version = "0.8", default-features = false, features = [
  "http1",
  "tokio",
  "json",
  "macros",
] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }
